# Ironclad.old

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  doc.bat  notation.txt
compiler/: Cargo.toml
compiler/src/: display.rs  erl_error.rs  erl_module.rs  funarity.rs  lib.rs  literal.rs  mfarity.rs  source_loc.rs
compiler/src/core_erlang/syntax_tree/: core_ast.rs  core_ast_as.rs  core_ast_builder.rs  core_ast_is.rs  core_ast_iter.rs  core_op.rs  mod.rs
compiler/src/erl_error/: err_fmt.rs  format.rs  from.rs  mod.rs
compiler/src/erl_module/: func_registry.rs  mod.rs
compiler/src/erlang/: mod.rs
compiler/src/erlang/module/: func_registry.rs  mod.rs
compiler/src/erlang/syntax_tree/: ast_builder.rs  ast_processor.rs  display.rs  erl_ast.rs  erl_ast_iter.rs  erl_ast_print.rs  erl_grammar.pest  erl_op.rs  erl_parser.rs  mod.rs  nom_parse_attr.rs
compiler/src/preprocessor/: mod.rs
compiler/src/preprocessor/nom_parser/: mod.rs
compiler/src/preprocessor/syntax_tree/: mod.rs  pp_ast.rs  pp_ast_fmt.rs  pp_ast_is.rs  pp_ast_new.rs  pp_ast_tree.rs  pp_parser.rs
compiler/src/project/: compiler_opts.rs  input_opts.rs  mod.rs  module.rs  source_file.rs
compiler/src/project/conf/: compiler_opts.rs  input_opts.rs  mod.rs
compiler/src/project/module/: func_registry.rs  mod.rs
compiler/src/stage/: code_cache.rs  compile_module.rs  file_contents_cache.rs  mod.rs
compiler/src/stage/file_preload/: mod.rs
compiler/src/stage/parse/: mod.rs
compiler/src/stage/preprocess/: mod.rs  pp_define.rs  pp_scope.rs
compiler/src/stage/s0_preload/: mod.rs
compiler/src/stage/s1_preprocess/: mod.rs
compiler/src/stage/s2_parse/: mod.rs
compiler/src/syntaxtree/: ast_cache.rs  mod.rs
compiler/src/syntaxtree/core_erl/: core_ast.rs  core_ast_iter.rs  core_op.rs  mod.rs
compiler/src/typing/: check.rs  debug.rs  display.rs  equation.rs  erl_type.rs  erl_type_is.rs  erl_type_new.rs  erl_type_prefab.rs  erl_type_print.rs  error.rs  extract_vars.rs  fn_clause_type.rs  fn_type.rs  function_clause_type.rs  function_type.rs  mod.rs  prefab.rs  record_field_type.rs  scope.rs  subtyping.rs  synth.rs  type_error.rs  type_synth.rs  type_union.rs  typevar.rs  unifier.rs
compiler/test_project/: .gitignore  erlproject.toml
compiler/test_project/src_small/: test_core_case.erl
compiler/tests/: erl_bin_parser_test.rs  erl_parser_test.rs  pp_parser_test.rs  test_util.rs  type_inference_test.rs  type_spec_test.rs  type_synthesis_test.rs  type_union_test.rs  typing_inference_test.rs  typing_test.rs
ironclad_exe/: Cargo.toml
ironclad_exe/src/: main.rs
ironclad_exe/src/stage/: mod.rs
ironclad_exe/tests/: data_size_test.rs  erl_bin_parser_test.rs  erl_parser_test.rs  parse_erl_binary_test.rs  parse_erl_source_test.rs  parse_erl_types_test.rs  pp_parser_test.rs  preprocessor_test.rs  test_util.rs  tokenizer_test.rs  type_spec_test.rs  type_synthesis_test.rs  type_union_test.rs  typing_test.rs
libironclad/: Cargo.toml
libironclad/src/: display.rs  lib.rs  mfarity.rs
libironclad/src/core_erlang/: mod.rs
libironclad/src/erl_error/: err_from.rs  mod.rs
libironclad/src/erlang/: mod.rs
libironclad/src/project/: compiler_opts.rs  input_opts.rs  mod.rs  module.rs  source_file.rs
libironclad/src/stage/: code_cache.rs  compile_module.rs  file_contents_cache.rs  mod.rs
libironclad/src/stats/: cache_stats.rs  io_stats.rs  preload_stats.rs  preprocessor_stats.rs  time_stats.rs
libironclad/src/typing/: check.rs  extract_vars.rs  type_narrow.rs
libironclad/test_project/: README.md
libironclad/test_project/src_small/: test_preproc.erl
libironclad/tests/: erl_bin_parser_test.rs  erl_parser_test.rs  pp_parser_test.rs  test_util.rs  tokenizer_test.rs  type_spec_test.rs  type_synthesis_test.rs  type_union_test.rs  typing_test.rs
libironclad_erlang/: Cargo.toml
libironclad_erlang/src/: exit_codes.rs  file_cache.rs  lib.rs  literal.rs  record_def.rs  source_file.rs  source_loc.rs
libironclad_erlang/src/erl_syntax/: erl_error.rs  erl_error_fmt.rs  erl_op.rs  ic_parser_error.rs  ic_preprocessor_error.rs  literal_bool.rs  mod.rs
libironclad_erlang/src/error/: ic_err_fmt.rs  ic_err_from.rs  ic_error.rs  ic_error_category.rs  ic_error_kind.rs  ic_error_trait.rs  mod.rs
libironclad_erlang/src/project/: compiler_opts.rs  erl_module.rs  mod.rs  module.rs  project_impl.rs  project_include.rs  project_inputs.rs
libironclad_erlang/src/stats/: cache_stats.rs  io_stats.rs  mod.rs  preload_stats.rs  preprocessor_stats.rs  time_stats.rs
libironclad_erlang/src/syntax_tree/: erl_error.rs  erl_error_fmt.rs  mod.rs
libironclad_erlang/src/typing/: check.rs  erl_integer.rs  extract_vars.rs  fn_clause_type.rs  fn_type.rs  mod.rs  prefab.rs  record_field_type.rs  scope.rs  subtyping.rs  type_error.rs  type_narrow.rs  type_synth.rs  type_union.rs  typevar.rs
libironclad_erlang/tests/: erl_bin_parser_test.rs  erl_parser_test.rs  pp_parser_test.rs
libironclad_erlsyntax/: Cargo.toml
libironclad_erlsyntax/src/syntax_tree/: erl_error.rs  erl_error_fmt.rs  mod.rs
libironclad_erlsyntax/src/typing/: check.rs  extract_vars.rs  fn_type.rs  mod.rs  prefab.rs  type_error.rs  type_synth.rs  type_union.rs
libironclad_ppsyntax/: Cargo.toml
libironclad_ppsyntax/src/: lib.rs  pp_error.rs
libironclad_ppsyntax/src/nom_parser/: mod.rs
libironclad_ppsyntax/src/syntax_tree/: pp_ast.rs  pp_ast_fmt.rs  pp_ast_is.rs  pp_ast_new.rs
libironclad_preprocessor/: Cargo.toml  Cargo.toml.txt
libironclad_preprocessor/src/: lib.rs  pp_error.rs  pp_error.txt
libironclad_preprocessor/src/nom_parser/: mod.rs  pp_parse_def_undef.rs  pp_parse_if.rs  pp_parse_types.rs
libironclad_preprocessor/src/parsers/: mod.rs  pp_parse_def_undef.rs  pp_parse_if.rs  pp_parse_if.txt  pp_parse_types.rs  pp_parse_types.txt
libironclad_preprocessor/src/preprocessor_syntax/: mod.txt  pp_ast.rs  pp_ast_fmt.rs  pp_ast_fmt.txt  pp_ast_is.rs  pp_ast_new.rs  pp_macro_string.rs  pp_macro_string.txt
libironclad_preprocessor/src/syntax_tree/: mod.rs  pp_ast.rs  pp_ast_fmt.rs  pp_ast_is.rs  pp_ast_new.rs
(+533 files in other folders)
