[package]
name = "typed_erlc"
version = "0.1.0"
authors = ["Dmytro Lytovchenko <dmytro.lytovchenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.1.2"
toml = "0.5.8"
serde = "1.0.126"
serde_derive = "1.0.126"
thiserror = "1.0.25"
#walkdir = "2.3.2"
glob = "0.3.0"
errloc_macros = "0.1.0"
