[package]
name = "compiler"
version = "0.1.0"
authors = ["Dmytro Lytovchenko <dmytro.lytovchenko@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = "1.0.126"
serde_derive = "1.0.126"
#thiserror = "1.0.25"
glob = "0.3.0"
pest = "2.1.3"
pest_derive = "2.1.0"
alphabet = "0.2.2"
lazy_static = "1.4.0"
#enum-as-inner = "0.3.3"
function_name = "0.2.0"
derivative = "2.2.0"
nom = "7"
#nom-recursive = "0.4.0"
#nom_locate = "4.0.0"
