[package]
name = "ironclad"
version = "2022.6.0"
authors = ["Dmytro Lytovchenko <dmytro.lytovchenko@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libironclad_erlang = { path = "../libironclad_erlang" }
libironclad_util = { path = "../libironclad_util" }

thiserror = "1.0.31"
glob = "0.3.0"
#pest = "2.1.3"
#pest_derive = "2.1.0"
alphabet = "0.2.2"
lazy_static = "1.4.0"
function_name = "0.3.0"
nom = "7.1.1"