[package]
name = "ironclad"
version = "2022.6.0"
authors = ["Dmytro Lytovchenko <dmytro.lytovchenko@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libironclad_erlang = { path = "../libironclad_erlang" }
libironclad_util = { path = "../libironclad_util" }

thiserror = "1"
glob = "0"
#pest = "2"
#pest_derive = "2"
alphabet = "0"
lazy_static = "1"
function_name = "0"
nom = "7"