[package]
name = "ironclad"
version = "2022.7.0"
authors = ["Dmytro Lytovchenko <dmytro.lytovchenko@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libironclad_erlang = { path = "../libironclad_erlang" }
libironclad_util = { path = "../libironclad_util" }

alphabet = "0"
function_name = "0"
glob = "0"
lazy_static = "1"
nom = "7"
thiserror = "1"
