[package]
name = "libironclad"
version = "2022.5.0"
authors = ["Dmytro Lytovchenko <dmytro.lytovchenko@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = "1.0.126"
serde_derive = "1.0.126"
glob = "0.3.0"
alphabet = "0.2.2"
lazy_static = "1.4.0"
function_name = "0.2.0"
derivative = "2.2.0"
nom = "7"
