[package]
name = "libironclad_erlang"
version = "2022.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libironclad_util = { path = "../libironclad_util" }

function_name = "0.2.0"
nom = "7"
derivative = "2.2.0"
lazy_static = "1.4.0"
num = "0.4.0"
num-bigint = "0.4.3"
glob = "0.3.0"
toml = "0.5.9"
serde = "1.0.137"
serde_derive = "1.0.137"
