[package]
name = "libironclad_erlang"
version = "2022.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libironclad_util = { path = "../libironclad_util" }

function_name = "0"
nom = "7"
derivative = "2"
lazy_static = "1"
num = "0"
num-bigint = "0"
glob = "0"
toml = "0"
serde = "1"
serde_derive = "1"
colored = "2"