[package]
name = "libironclad_erlang"
version = "2022.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libironclad_util = { path = "../libironclad_util" }

colored = "2"
derivative = "2"
function_name = "0"
glob = "0"
lazy_static = "1"
nom = "7"
num = "0"
num-bigint = "0"
serde = "1"
serde_derive = "1"
toml = "0"
