[package]
name = "libironclad_preprocessor"
version = "2022.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libironclad_erlang = { path = "../libironclad_erlang" }
libironclad_util = { path = "../libironclad_util" }
libironclad_error = { path = "../libironclad_error" }

function_name = "0.2.0"
nom = "7"
